Fix spacing in code

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,10 @@ html {
   box-sizing: border-box;
 }
 
-  *, *::before, *::after {
+*, *::before, *::after {
   box-sizing: inherit;
-  font-family: sans-serif;
-  line-height:normal;
+  font-family: Georgia, sans-serif;
+  line-height: normal;
 }
 
 .cards {
